# pynotiondb

./: README.md  pyproject.toml  test_parser.py
.github/workflows/: python-package.yml
__snapshots__/: test_parser.ambr
pynotiondb/: __init__.py  exceptions.py  mysql_query_parser.py  notion_api.py
pynotiondb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
