[project]
name = "pynotiondb"
version = "0.1.0"
description = "A Python wrapper for interacting with Notion databases using SQL-style syntax"
readme = "README.md"
requires-python = ">=3.6"
authors = [
  { name = "aditya76-git", email = "cdr.aditya.76@gmail.com" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "requests>=2.0.0",
  "sqlglot>=18.2.0",
]

[project.urls]
Homepage = "https://github.com/aditya76-git/pynotiondb"
Tracker = "https://github.com/aditya76-git/pynotiondb/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pdbpp>=0.10.3",
    "pytest>=7.0.1",
    "syrupy>=2.3.1",
]
